[tool.poetry]
name = "pyramid-app-with-django-password-hash"
version = "0.1.0"
description = ""
authors = ["Mizuki Sato <mizki.sato.0025@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.17"
pyramid = "^1.10.4"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
mypy = "^0.770"
pytest-cov = "^2.8.1"
sqlalchemy-stubs = "^0.3"
bpython = "^0.19"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
